created user module api endpoints

--- a/server/mails/activation-mail.ejs
+++ b/server/mails/activation-mail.ejs
@@ -34,9 +34,9 @@
 <body>
   <h1>Account Activation</h1>
   <p>Welcome to LMS!</p>
-  <p>To activate your account, please click the following link:</p>
-  <a href="<%= activationCode %>">Activate Your Account</a>
-  <p>Please enter this code on the activaation page within the next 5 minutes</p>
+  <p>Code to activate your account</p>
+  <h2><%= activationCode %></h2>
+  <p>Please enter this code on the activation page within the next 5 minutes</p>
   <p>If you didn't request this activation, you can ignore this message.</p>
   <p>Thank you for joining us!</p>
 </body>
